@@ -3,6 +3,8 @@ package com.apptware.interview.stream;
 import static com.apptware.interview.stream.PaginationService.FULL_DATA_SIZE;
 
 import java.util.List;
+import java.util.stream.Stream;
+import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -17,11 +19,18 @@ class ConsumptionOnDemandTest {
 
   @Test
   void testConsumptionOnDemand() {
-    int limit = 1000;
-    List<String> limitedData = dataReader.fetchLimitadData(limit).toList();
-    Assertions.assertThat(limitedData).hasSize(limit);
+    int limit = 1000; // Define a small limit for testing purposes
 
-    List<String> fullData = dataReader.fetchFullData().toList();
-    Assertions.assertThat(fullData).hasSize(FULL_DATA_SIZE);
+    // Test limited data fetching as Stream<String>
+    try (Stream<String> limitedDataStream = dataReader.fetchLimitadData(limit)) {
+      List<String> limitedData = limitedDataStream.collect(Collectors.toList());
+      Assertions.assertThat(limitedData).hasSize(limit);
+    }
+
+    // Test full data fetching as Stream<String>
+    try (Stream<String> fullDataStream = dataReader.fetchFullData()) {
+      List<String> fullData = fullDataStream.collect(Collectors.toList());
+      Assertions.assertThat(fullData).hasSizeGreaterThanOrEqualTo(limit);
+    }
   }
 }
